# infera

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  install.ps1  install.sh  release-please-config.json  test_full.txt  test_output.txt
.github/workflows/: ci.yml  publish-choco.yml  release.yml
packaging/chocolatey/: infs.nuspec
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
skills/: README.md
skills/infs-cli/: SKILL.md
skills/infs-cli/references/: app-discovery.md  authentication.md  cli-reference.md  running-apps.md
skills/infs-image/: SKILL.md
skills/infs-llm/: SKILL.md
src/: error.rs  main.rs  retry.rs  types.rs
src/auth/: mod.rs
src/catalog/: mod.rs
src/cli/: app.rs  completions.rs  config.rs  doctor.rs  mod.rs  provider.rs  update.rs
src/config/: mod.rs
src/providers/: falai.rs  mod.rs  openrouter.rs  registry.rs  replicate.rs  wavespeed.rs
