[package]
name = "infs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A fast, provider-agnostic CLI for AI apps and models"
license = "MIT"
readme = "README.md"

[[bin]]
name = "infs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
directories = "5"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
async-trait = "0.1"
keyring = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
